# SipClient

./: .gitignore  Cargo.toml  Readme.md
core/: Cargo.toml
core/src/: lib.rs
core/src/accounts/: account.rs  account_type.rs  memory.rs  mod.rs  models.rs
core/src/config/: memory.rs  mod.rs  var_key.rs  var_value.rs
core/src/contacts/: contact.rs  memory.rs  mod.rs
core/src/core/: error.rs  mod.rs  provider.rs
core/src/database/: memory.rs  mod.rs  models.rs  transaction_data.rs  transaction_event.rs
core/src/notifier/: argument.rs  mod.rs  null.rs  params.rs
core/src/rpc/: handler.rs  request.rs  response.rs
core/src/server/: address.rs  builder.rs  ctx.rs  server.rs
core/src/session/: event.rs  mod.rs
core/src/session/sip/: bye.rs  cancel.rs  errors.rs  invite.rs  macros.rs  message.rs  mod.rs  register.rs  session.rs
core/src/streaming/: error.rs  event.rs  mod.rs  null.rs
core/src/streaming/gst/: mod.rs  pipeline.rs  session.rs
core/src/streaming/gst/elements/: audio.rs  mod.rs  rtp.rs  udp.rs  utils.rs
crates/parse/: Cargo.toml
crates/sdp/: Cargo.toml
crates/sdp/src/: address_type.rs  attribute.rs  bandwidth.rs  connection.rs  encryption.rs  lib.rs  network_type.rs  offer.rs  origin.rs  timing.rs
crates/sdp/src/attributes/: mod.rs  ty.rs
crates/sdp/src/core/: address_type.rs  bandwidth.rs  codec.rs  network_type.rs
crates/sdp/src/lines/: connection.rs  mod.rs  origin.rs  session_name.rs  timing.rs
crates/sdp/src/media/: codec.rs  media_type.rs  mod.rs  parse.rs  protocol.rs
crates/sdp/tests/: connection.rs  offer.rs  origin.rs  tests.rs  timing.rs
crates/sdp/tests/examples/: mod.rs  wikipedia.rs  wireshark_g711.rs  work.rs
crates/sip/: Cargo.toml  Readme.md
crates/sip/examples/: sip_console.rs  sip_udp_register.rs
crates/sip/src/: lib.rs  macros.rs  request.rs
crates/sip/src/client/: invite.rs  messaging.rs  mod.rs  registration.rs
crates/sip/src/core/: message.rs  mod.rs  version.rs
crates/sip/src/headers/: mod.rs  named.rs  parse.rs  via.rs
crates/sip/tests/: tests.rs
crates/sip/tests/core/: message.rs  request.rs  response.rs  version.rs
crates/sip/tests/headers/: allow.rs  authorization.rs  callid.rs  cseq.rs  date.rs  expires.rs  max_forwards.rs  mime_version.rs  min_expires.rs  organization.rs  priority.rs  record_route.rs  require.rs  retry_after.rs  route.rs  server.rs  subject.rs  supported.rs  timestamp.rs  unsupported.rs  useragent.rs  via.rs  warning.rs  www_authenticate.rs
crates/sip/tests/headers/accept/: encoding.rs  lang.rs  mod.rs
crates/sip/tests/headers/content/: disposition.rs  encoding.rs  lang.rs  length.rs  ty.rs
crates/sip/tests/headers/info/: alert_info.rs  auth_info.rs  call_info.rs  err_info.rs
crates/sip/tests/headers/named/: contact.rs  from.rs  in_reply_to.rs  reply_to.rs  to.rs
crates/sip/tests/headers/proxy/: auth.rs  authorization.rs  require.rs
crates/sip/tests/uri/: auth.rs  domain.rs  uri.rs
crates/uri/: Cargo.toml
crates/uri/src/: auth.rs  domain.rs  lib.rs  macros.rs  params.rs
data/GStreamerDotFiles/: 2533ec44-a84e-1238-c495-08002778b44f.dot  89ad814a-a84e-1238-c495-08002778b44f.dot  input_245788a2-a756-1238-7186-08002778b44f.dot  input_2ec7ed00-a757-1238-7186-08002778b44f.dot  input_ff56ad3c-a756-1238-7186-08002778b44f.dot  output_245788a2-a756-1238-7186-08002778b44f.dot  output_2ec7ed00-a757-1238-7186-08002778b44f.dot  output_ff56ad3c-a756-1238-7186-08002778b44f.dot
gjs/: main.js  preferences.js
nirah/: Cargo.toml
nirah/core/: Cargo.toml
nirah/core/src/: lib.rs
nirah/core/src/accounts/: memory.rs
nirah/core/src/audio/: direction.rs  mod.rs  rodio.rs
nirah/core/src/config/: keys.rs  macros.rs  memory.rs  mod.rs  var_value.rs
nirah/core/src/contacts/: memory.rs  mod.rs  models.rs
nirah/core/src/core/: error.rs  mod.rs  provider.rs
nirah/core/src/database/: memory.rs  models.rs
nirah/core/src/notifier/: mod.rs  null.rs
nirah/core/src/rpc/: handler.rs  mod.rs  request.rs  response.rs
nirah/core/src/server/: address.rs  builder.rs  ctx.rs  mod.rs  server.rs
nirah/core/src/session/: mod.rs
nirah/core/src/session/sip/: bye.rs  cancel.rs  invite.rs  message.rs  mod.rs  register.rs  session.rs
nirah/core/src/streaming/: gstreamer.rs  mod.rs  null.rs
nirah/core/src/streaming/gstreamer/: mod.rs  run_signal.rs
nirah/nirah/: Cargo.toml
nirah/nirah/src/: audio.rs  lib.rs  streaming.rs
nirah/nirah/src/cli/: accounts.rs  audio.rs  config.rs  contacts.rs  mod.rs  streams.rs
nirah/src/: lib.rs  stream.rs  uds.rs
nirah/src/cli/: accounts.rs  config.rs  contacts.rs  mod.rs  utils.rs
nirah/src/stream/: mod.rs
(+18 files in other folders)
