[package]
name = "nirah-core"
version = "0.1.0"
authors = ["Bytebuddha <pmg41494@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.14"
tokio = "0.2.0-alpha.6"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
log = "0.4.8"
pnet = "0.22.0"
ipnetwork = "0.14.0"
libsip = { git = "https://github.com/Bytebuddha/libsip" }
nom = "5.0.1"
futures-preview = "0.3.0-alpha.19"
chrono = { version = "0.4.9", features = ["serde"] }
base64 = "0.11.0"
