[package]
name = "nirah-core"
version = "0.1.0"
authors = ["Bytebuddha <pmg41494@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gst = ["gstreamer", "glib"]

[dependencies]
async-trait = "0.1.19"
tokio = { version = "0.2.1", features = ["full"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
log = "0.4.8"
pnet = "0.23.0"
ipnetwork = "0.15.1"
libsip = { git = "https://github.com/Bytebuddha/libsip" }
libsdp = { git = "https://github.com/Bytebuddha/libsdp" }
nom = "5.0.1"
futures = "0.3.1"
chrono = { version = "0.4.10", features = ["serde"] }
base64 = "0.11.0"
gstreamer = { version = "0.15.0", optional = true }
glib = { version = "0.9.0", optional = true }
