[package]
name = "nirah"
version = "0.1.0"
authors = ["Bytebuddha <pmg41494@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nirah"
path = "src/bin/nirah.rs"

[dependencies]
nirah-core = { path = "../core", features = ["gst"] }
libsip = { git = "https://github.com/Bytebuddha/libsip" }
libsdp = { path = "../../libsdp" }
chrono = "0.4.10"
tokio = { version = "0.2.1", features = ["full"] }
async-trait = "0.1.19"
serde_json = "1.0.42"
clap = "2.33.0"
log = "0.4.8"
simple_logger = "1.3.0"
ascii_table = "2.0.0"
