[package]
name = "sdp"
version = "0.1.0"
authors = ["Bytebuddha <pmg41494@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nirah-parse = { path = "../parse" }
nirah-uri = { path = "../uri" }
nom = "5.0.1"
