[package]
name = "nirah-sip"
version = "0.1.0"
authors = ["Bytebuddha <pmg41494@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nirah-parse = { path = "../parse" }
nirah-uri = { path = "../uri" }
nom = "5.0.1"
rand = "0.7.2"
md5 = "0.7.0"
serde = { version = "1.0.102", features=["derive"] }

[dev-dependencies]
tokio = { version = "0.2.0-alpha.6" }
