[package]
name = "nirah"
version = "0.1.0"
authors = ["Bytebuddha <pmg41494@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nirah"
path = "src/bin/nirah.rs"

[dependencies]
nirah-core = { path = "../core" }
nirah-sip = { path = "../../crates/sip" }
nirah-uri = { path = "../../crates/uri" }
chrono = "0.4.9"
tokio = "0.2.0-alpha.6"
async-trait = "0.1.14"
serde_json = "1.0.40"
clap = "2.33.0"
log = "0.4.8"
simple_logger = "1.3.0"
ascii_table = "2.0.0"
gstreamer = "0.14.5"
webrtc-sdp = "0.3.1"
rodio = "0.9.0"
alsa = "0.1.2"
